--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "c3": "^0.4.11"
   },
   "devDependencies": {
-    "noble": "github:monteslu/noble",
+    "noble": "github:jacobrosenthal/noble#webble-scanfix",
     "webpack": "^1.12.11",
     "json-loader": "^0.5.4"
   }
